Client-side cropping

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,10 +3,10 @@ html
   head
     title
       | Web browser
-    link(rel="stylesheet", href="//code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css")
+    link(rel="stylesheet", href="/lib/jquery-ui/jquery-ui.min.css")
   
-    script(src='//code.jquery.com/jquery-1.11.0.min.js')
-    script(src='//code.jquery.com/ui/1.11.1/jquery-ui.js')
+    script(src='/lib/jquery-1.11.1.min.js')
+    script(src='/lib/jquery-ui/jquery-ui.js')
     script(src='/socket.io/socket.io.js')
     script(src='/lib/eventHandler.js') 
     script(src='/lib/main.js')    
