--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,17 +26,28 @@ canvas#web_view {
 	z-index:1;
 }
 
+
+div#screenSetModal {
+	display:none;
+	z-index:2;
+	width: 700px;
+	height: 550px;
+}
+
+
+#rectangleArea {
+	display:block;
+	
+}
+
 #total_view {
 	border: 1px;
 	border-color: black;
 	border-style: groove;
 }
 
-#screenSetModal {
-	display:none;
-	z-index:2;
-	width: 700px;
-	height: 550px;
+#total_viewDiv {
+	position: relative;
 }
 
 #header-bar {
