stabilized server rendering

--- a/views/index.jade
+++ b/views/index.jade
@@ -25,7 +25,7 @@ block content
 		
 	div#calibrationMode
 		canvas#cal_view( style="width: 100% ; height: 100%;")
-		div#pivot()
+		//div#pivot()
 		
 		button#removeAllGuides(type="button")
 			| Remove All
